# sign-language-detector-backend

./: .gitignore  README.md  pyproject.toml  signature-inspired.html  test.html
src/model/: model_loader.py
src/model/finetune/: dataset.py  train.py
src/model/finetune/data engineering/: clean_data.py
src/model/finetune/data_engineering/: filter_data.py  video_downloader.py
src/model/finetune/data_engineering/datasets/: test_data.json  wlasl_cleaned.json
src/model/params/: vlm.yml
