[project]
name = "sign-language-detector-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
   "accelerate>=1.11.0",
   "av>=16.0.1",
   "bitsandbytes>=0.48.2",
   "peft>=0.18.0",
   "python-dotenv>=1.2.1",
   "pyyaml>=6.0.3",
   "torch-directml>=0.2.5.dev240914",
   "transformers>=4.57.1",
]
